# urfu_nlp_homework

./: .gitignore  README.md  data.dvc  lstm.py  nlp-2nd-homework(from-LSTM-to-GRU).ipynb  nlp-home-work-urfu-sf-3rd-sem.ipynb  nlp-home-work2-urfu-sf-3rd-sem.ipynb  pyproject.toml  simple-ml-nn-for-text-classification(1).ipynb  simple_multilayer_model.py
.dvc/: config
