[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.0.9"
numpy = "^1.26.2"
pandas = "^2.1.4"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
nltk = "^3.8.1"
wordcloud = "^1.9.3"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
pyarrow = "^14.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
