[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.0.9"
numpy = "^1.26.2"
pandas = "^2.1.4"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
nltk = "^3.8.1"
wordcloud = "^1.9.3"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
pyarrow = "^14.0.1"
torchtext = {url = "https://download.pytorch.org/whl/torchtext-0.16.0%2Bcpu-cp311-cp311-linux_x86_64.whl#sha256=77be69561b92612ead6fb0e8e922d8f3903737940d583464cfb22ceb6b11cc9d"}
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.1.0%2Bcpu-cp311-cp311-linux_x86_64.whl#sha256=5954924ce74bc7e6a6c811e3fa4bdda9936d9889f6369fd068420c444bfd1cae"}
spacy = "^3.7.2"
torchmetrics = "^1.2.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
